--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "highlight.js": "^10.6.0",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vuetify": "^2.2.11"
