--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "highlight.js": "^10.6.0",
+    "is-svg": "^4.2.2",
+    "ssri": "^8.0.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
     "vuetify": "^2.2.11"
