--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "highlight.js": "^10.6.0",
     "is-svg": "^4.2.2",
+    "normalize-url": "^4.5.1",
     "ssri": "^8.0.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
