--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ansi-regex": "^5.0.1",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "highlight.js": "^10.6.0",
     "is-svg": "^4.2.2",
+    "node-forge": "^1.0.0",
     "normalize-url": "^4.5.1",
+    "postcss": "^8.2.13",
     "ssri": "^8.0.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5",
